# stock-prediction-py

./: .firebaserc  .gitattributes  .gitignore  .gitmodules  CLEANUP_GUIDE_REWASH.md  CLEANUP_POST_SPLIT.md  COMPLETION_REPORT.md  DEV_DOCS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  README_SPLIT.md  SPLIT_INSTRUCTIONS.md  STOCK_PUBLISH_INSTRUCTIONS.md  TESTING_GUIDE.md  docker-compose.yml  environment.yml  generate_sample_data.py  lighthouse-report.json  new_items.txt  package-lock.json  package.json  package.json.bak  paths-to-remove.txt  postcss.config.js  publish.sh  setup.cfg  stock_data.csv  stock_market_prediction.py  validateCatalog.js  vitest.config.ts
backend/: .env.example  (+7 more)
projects/stock-prediction/stock_market_prediction/: .gitignore  .gitignore.temp  Dockerfile  README_MICROSERVICE.md  lstm_stock_model.h5  pyproject.toml  quick_predict.py  quick_predict_lstm.py  requirements-dev.txt  requirements.txt  setup.cfg
projects/stock-prediction/stock_market_prediction/api/: main.py
projects/stock-prediction/stock_market_prediction/data/: schema.py  validate.py
projects/stock-prediction/stock_market_prediction/frontend/: package.json  vitest.config.ts
projects/stock-prediction/stock_market_prediction/models/: lstm_SAMPLE_20251028223826.keras  model_SAMPLE_20251028223826_74a490cc5a62.pkl
projects/stock-prediction/stock_market_prediction/reports/: backtest_SAMPLE_1761701483.json  backtest_SAMPLE_1761740831.json  eval_SAMPLE_1761741896.json  metrics_SAMPLE_1761747696.json  training_20251028223826.json
(+340 files in other folders)
