[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_market_prediction"
version = "0.0.0"
description = "Stock market prediction microservice (split from monorepo)"
authors = [ { name = "Rakesh Reddy" } ]
readme = "README.md"
requires-python = ">=3.10"

